--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap">
+
   <title>Frontend Mentor | QR code component</title>
+
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,13 +20,14 @@
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+    <div>
+      <img src="images/image-qr-code.png" alt="">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <h2>Improve your front-end skills by building projects</h2>
+
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+
+    </div>
+
 </body>
 </html>
